--- a/back-end/spring-boot-rest-api-mysql/employee-service/src/main/resources/stored-procedure/stored-procedures.properties
+++ b/back-end/spring-boot-rest-api-mysql/employee-service/src/main/resources/stored-procedure/stored-procedures.properties
@@ -1,2 +1,4 @@
 GET_ALL_EMPLOYEES = CALL GetAllEmployees();
+SAVE_EMPLOYEE = CALL SaveEmployee(:englishName, :vietnameseName, :departmentId, :gender, :birthday, :countryId,\
+  :phoneNumber, :email, :status, :isManager);
 GET_EMPLOYEE_BY_ID = CALL GetEmployeeById(?);
